<resources>
    <string name="app_name">Health Guruji</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="website">www.health-guruji.in</string>
    <string name="blog">Blog</string>
    <string name="youtube">YouTube</string>
    <string name="facebook">Facebook</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="share_using">Share using</string>
    <string name="share_message">Hey checkout Health Guruji, there you can find great health tips. And download their app from</string>
    <string name="about_us_description">
        This App is powered and maintained by Airwaysbooking.com\n\nAirwaysBooking is the right place to find the cheapest flight tickets. We compare 1000s of airlines and 200s of online travel agencies (OTAs) and find cheap flights to all destinations worldwide. Now the cheapest ticket in your hand\n\nYou can also find cheap hotels in our official website Airwaysbooking.com\n\nFor any additional information, you can enquire at our company mail help@airwaysbooking.zendesk.com. Our support team will respond as soon as possible and we are always happy to help you.
    </string>
    <string name="version">"Version: %1$s"</string>
    <string name="about_us">About us</string>

</resources>
