<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/blog" />
        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/ic_menu_youtube"
            android:title="@string/youtube" />
        <item
            android:id="@+id/nav_facebook"
            android:icon="@drawable/ic_menu_facebook"
            android:title="@string/facebook" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about_us"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
